--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <!-- Code that all your templates share, like a header -->
+  {{ partial "shared/nav.html" . }}
   <main>
     {{ block "main" . }}
     <!-- The part of the page that begins to differ between templates -->
