--- a/layouts/partials/shared/nav.html
+++ b/layouts/partials/shared/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-primary navbar-light bg-light justify-content-between">
-  <a class="navbar-brand">Navbar</a>
+  <a class="navbar-brand">Song Request</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add New</button>
   </form>
 </nav>
