--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,26 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "./sidebar.scss";
 
-*{
+* {
   border: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.wrapper{
+  height: calc(100vh - 56px);
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 1.7em;
+  color: #999;
+}
+
+a, a:hover, a:focus {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
 }
