--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,3 +24,23 @@ a, a:hover, a:focus {
   text-decoration: none;
   transition: all 0.3s;
 }
+
+.login{
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1000;
+}
+
+nav{
+  .userInfo{
+    margin-left: 1rem;
+    border-left: 1px solid black;
+    .userImg{
+      cursor: pointer;
+      border-radius: 100%;
+      height: 40px;
+      margin-left: 1rem;
+    }
+  }
+}
