--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   {{ $style := resources.Get "sass/main.scss" | toCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
-  <title>
-    {{ block "title" . }}
-    {{ .Site.Title }}
-    {{ end }}
-  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 
 <body>
-  {{ block "main" . }}
+  {{ define "main" }}
+    
   {{ end }}
-  {{ $script := resources.Get "js/bundle.js" | minify | fingerprint }}
-  <script src="{{ $script.Permalink }}"></script>
 </body>
 
 </html>
