--- a/layouts/partials/shared/nav.html
+++ b/layouts/partials/shared/nav.html
@@ -1,7 +1,14 @@
 <nav class="navbar bg-primary navbar-light bg-light justify-content-between">
-  <a class="navbar-brand">Song Request</a>
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add New</button>
-  </form>
+  <a href="/" class="navbar-brand">Song Request</a>
+  <div class="right d-flex">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Link to Youtube" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add New Song</button>
+    </form>
+    <div class="userInfo">
+      <img src="" class="userImg" alt="userImage">
+      <span class="userDisplayName"></span>
+      <button class="btn btn-outline-danger my-2 my-sm-0 ml-3">Log Out</button>
+    </div>
+  </div>
 </nav>
