Now I can add songs from the chat :D

--- a/layouts/user/section.html
+++ b/layouts/user/section.html
@@ -24,7 +24,7 @@
           <h5 class="text-light">Your song event hasn't been set</h5>
           <div class="input-group m-3 col-4">
             <div class="input-group-prepend">
-              <button class="btn input-group-text">Set song listener</button>
+              <button class="btn input-group-text setEventButton">Set song listener</button>
             </div>
             <input placeholder= "Custom event id" type="text" class="form-control" id="reward-id" aria-describedby="basic-addon3">
             <small id="passwordHelpBlock" class="form-text text-muted">
