--- a/layouts/partials/shared/nav.html
+++ b/layouts/partials/shared/nav.html
@@ -3,7 +3,7 @@
   <div class="right d-flex">
     <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Link to Youtube" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add New Song</button>
+      <button class="btn btn-outline-success my-2 my-sm-0 addNewSongButton" type="submit">Add New Song</button>
     </form>
     <div class="userInfo">
       <img src="" class="userImg" alt="userImage">
