--- a/layouts/user/section.html
+++ b/layouts/user/section.html
@@ -20,13 +20,14 @@
       {{ partial "shared/sidebar.html" . }}
       <div class="container-fluid songList">
         <div class="row align-items-center justify-content-center songEventSetter">
-          
+
           <h5 class="text-light">Your song event hasn't been set</h5>
           <div class="input-group m-3 col-4">
             <div class="input-group-prepend">
               <button class="btn input-group-text setEventButton">Set song listener</button>
             </div>
-            <input placeholder= "Custom event id" type="text" class="form-control" id="reward-id" aria-describedby="basic-addon3">
+            <input placeholder="Custom event id" type="text" class="form-control" id="reward-id"
+              aria-describedby="basic-addon3">
             <small id="passwordHelpBlock" class="form-text text-muted">
               Send a new song on your channel's chat and the event will automatically get here
             </small>
