--- a/layouts/partials/shared/nav.html
+++ b/layouts/partials/shared/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-primary navbar-light bg-light justify-content-between">
   <div class="left">
     {{ $image := resources.Get "images/logo.svg" }}
-    <img class="logoImg" src="{{ $image.Permalink }}" alt="">
+    <img class="logoImg" src="{{ $image.RelPermalink }}" alt="">
     <h2 class="font-weight-bold m-0">CPS</h2>
   </div>
   <div class="right d-flex">
