--- a/layouts/user/single.html
+++ b/layouts/user/single.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   {{ $style := resources.Get "sass/main.scss" | toCSS | minify | fingerprint }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}">
+  <link rel="stylesheet" href="{{ $style.RelPermalink }}">
   <title>
     {{ block "title" . }}
     {{ .Site.Title }}
@@ -17,7 +17,7 @@
   {{ .Content }}
 
   {{ $script := resources.Get "js/bundle.js" | minify | fingerprint }}
-  <script src="{{ $script.Permalink }}"></script>
+  <script src="{{ $script.RelPermalink }}"></script>
 </body>
 
 </html>
