--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,25 +4,25 @@
     <div class="col-3 d-flex align-items-center justify-content-end">
       {{ $image := resources.Get "images/logo.svg" }}
       <img class="logoImg" src="{{ $image.RelPermalink }}" alt="">
-      <h1 class="ml-3 mb-0 text-light">Jashimon</h1>
+      <h1 class="ml-3 mb-0 text-light">CPS</h1>
     </div>
     <div class="ml-auto col-2 d-flex justify-content-end">
       <i class="fab fa-discord fa-2x text-light mx-2"></i>
       <i class="fab fa-youtube fa-2x text-light mx-2"></i>
       <i class="fab fa-twitter fa-2x text-light mx-2"></i>
-      | &nbsp&nbsp <a href="javascript:void(0)" class="text-light font-weight-bold">Terms of use</a>
+      | &nbsp&nbsp <a href="/guide" class="text-light font-weight-bold">Use guide</a>
     </div>
   </div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-4 mx-auto mt-3 pt-3">
-        <img src="https://kappamon.com/images/kappamon_graphic_transparent.svg" alt="">
+        <img class="w-100" src="https://i.imgur.com/1oA9pPT.png" alt="">
       </div>
     </div>
     <div class="row">
       <div class="welcome-message col-7 mx-auto text-center text-light font-weight-bold">
-        <h1>Your Very Own Virtual Stream Pet</h1>
-        <h2>Auto greets viewers, dances to !song, and many more fun interactions with custom commands!</h2>
+        <h1>Let your viewers ask for songs with native <u><a href="https://help.twitch.tv/s/article/channel-points-guide?language=en_US">twitch points</a></u></h1>
+        <h4 class="pt-3">Web based you don't need to install anything!</h4>
       </div>
       <div class="col-7 mx-auto d-flex justify-content-center">
         <a class='btn btn-success p-3 loginButton' href="javascript:void(0)">
