--- a/layouts/partials/shared/nav.html
+++ b/layouts/partials/shared/nav.html
@@ -12,7 +12,7 @@
     <div class="userInfo">
       <img src="" class="userImg" alt="userImage">
       <span class="userDisplayName"></span>
-      <button class="btn btn-outline-danger my-2 my-sm-0 ml-3">Log Out</button>
+      <button class="logoutBtn btn btn-outline-danger my-2 my-sm-0 ml-3">Log Out</button>
     </div>
   </div>
 </nav>
